// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToContactDtoArray should map the gql data only including fields on the picklist 1`] = `
[
  {
    "email": "ramsey.bolton@email.com",
    "id": "id-0",
    "name": "Ramsey Bolton",
  },
  {
    "email": "john.snow@email.com",
    "id": "id-1",
    "name": "John Snow",
  },
  {
    "email": "tywin.lannister@email.com",
    "id": "id-2",
    "name": "Tywin Lannister",
  },
  {
    "email": "",
    "id": "id-3-defaults",
    "name": "",
  },
]
`;

exports[`mapToContactDtoArray should map the gql data to the correct Dtos 1`] = `
[
  {
    "accountId": "1233",
    "email": "ramsey.bolton@email.com",
    "id": "id-0",
    "name": "Ramsey Bolton",
    "projectId": "abcd",
    "role": "unknown role",
    "roleName": "Active label",
  },
  {
    "accountId": "1233",
    "email": "john.snow@email.com",
    "id": "id-1",
    "name": "John Snow",
    "projectId": "abcd",
    "role": "unknown role",
    "roleName": "Active label",
  },
  {
    "accountId": "1233",
    "email": "tywin.lannister@email.com",
    "id": "id-2",
    "name": "Tywin Lannister",
    "projectId": "abcd",
    "role": "unknown role",
    "roleName": "Active label",
  },
  {
    "accountId": "unknown",
    "email": "",
    "id": "id-3-defaults",
    "name": "",
    "projectId": "unknown",
    "role": "unknown role",
    "roleName": "",
  },
]
`;
